# MaidSafe-API

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: maidsafe.h
include/maidsafe/: account.h  account_getter.h  anonymous_session.h  api.h  client.h  client1.h  config.h  directory_info.h  encryptor.h  maidsafe.h  private_client.h  session_handler.h  user_credentials.h
include/maidsafe/detail/: account.h  account_getter.h  account_handler.h  session_getter.h  session_handler.h
src/maidsafe/: account.cc  account.proto  account_getter.cc  anonymous_session.cc  anonymous_session.proto  api.cc  client.cc  config.cc  private_client.cc  session_handler.cc
src/maidsafe/detail/: account.cc  account.proto  account_getter.cc  account_handler.cc  client_impl.cc  client_impl.h  session_getter.cc  session_handler.cc
src/maidsafe/tests/: account_getter_test.cc  account_handler_test.cc  account_test.cc  ananomyous_session_test.cc  anonymous_session_test.cc  client_test.cc  config_test.cc  directory_info_test.cc  private_client_test.cc  session_getter_test.cc  session_handler_test.cc  test_utils.cc  test_utils.h  tests_main.cc
